--- a/build.gradle
+++ b/build.gradle
@@ -107,6 +107,7 @@ project(":core") {
 
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
+        implementation "org.mini2Dx:universal-tween-engine:6.3.3"
         
     }
 }
